
Version 1.3.4
-------------

- fixed crash when closing the application
- fixed searching in catalogs (bug #1230857)


Version 1.3.3
-------------

- added ability to create bookmarks (Olivier Sannier)
- improved status icons (Olivier Sannier)
- more robust parsing of catalog headers
- saving into read-only file now fails as expected
- fixed saving of gettext keywords with commas in them
- added more translations:
     Galician (Leandro Regueiro)
     Indonesian (Bayu Artanto)
     Friulian (Andrea Decorte)
     Finnish (Keikki Suopanki)


Version 1.3.2
-------------

- fixed bogus warnings when updating from a POT file
- added "New catalog from POT file" feature
- added ability to display automatic comments in the UI (Olivier Sannier)
- translations manager now searches subdirectories as well (David Fraser)
- the Find tool can now optionally search from current position instead of
  from the beginning of the catalog (Olivier Sannier)
- fixed TM to not crash on catalogs with non-ASCII msgid values
- fixed catalog parser to correctly preserve automatic comments with
  duplicate lines and to not ignore every second automatic comment
  (Olivier Sannier)
- added ability to search comments (Olivier Sannier)
- poEdit now preserves obsolete translations (Olivier Sannier)
- added checking of input files' correctness
- fixed parsing of "\\n" substrings in catalog headers
- fixed compilation with wxWidgets >= 2.5.3
- fixed Find to search in all plural forms instead of only the first one
- added "whole words only" option to Find tool (Olivier Sannier)
- added default parsers for more programming languages supported by xgettext
- [Win32] fixed list control corruption when updated catalog had fewer items
  than before the update
- added more translations:
     Korean (Hojin Choi)
     Hebrew (Nir Lavi)
     Kyrgyz (Ilyas Bakirov)
     Ukrainian (Cawko Xakep)
     Puerto Rico Spanish (Fernando Ortiz)
     Asturian (Softastur)


Version 1.3.1
-------------
