@@ -4,6 +4,7 @@ Version 1.3.4
 
 - fixed crash when closing the application
 - fixed searching in catalogs (bug #1230857)
+- fixed restoring window size when maximized
 
 
 Version 1.3.3
